tests/neg/3559d.scala
class B {
  def f: String = "hello"
}

class A(a: Any) extends B {
  def this() = {
    this(f)           // error
  }
}
