tests/neg/3559d.check
-- [E006] Not Found Error: tests/neg/3559d.scala:7:9 -------------------------------------------------------------------
7 |    this(f)           // error
  |         ^
  |         Not found: f
  |
  | longer explanation available when compiling with `-explain`
